--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <!-- /.slide -->
       </div>
       <!-- /.slider -->
-      <div class="promo container">
+      <div class="promo">
         <section class="card slide-text-light sweet-bascet">
           <img
             src="img/sweet-bascet.png"
